--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
-.gitignore
 .idea/CphProgrammering.iml
 .idea/misc.xml
 .idea/modules.xml
 .idea/workspace.xml
 .idea/vcs.xml
 test/
+.idea/
